[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/SQUARE.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/PlayArea/GUI/GameOverPopup.gd" type="Script" id=2]
[ext_resource path="res://Square.ttf" type="DynamicFontData" id=3]


[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="ButtonGroup" id=4]

[sub_resource type="ButtonGroup" id=5]

[node name="GameOverPopup" type="PopupDialog"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 120.0
margin_right = -300.0
margin_bottom = -85.0
rect_min_size = Vector2( 600, 500 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 359 )
mouse_filter = 1
custom_constants/margin_right = 84
custom_constants/margin_top = 50
custom_constants/margin_left = 84
custom_constants/margin_bottom = 50

[node name="VerticalAlign" type="VBoxContainer" parent="Margin"]
use_parent_material = true
margin_left = 84.0
margin_top = 50.0
margin_right = 596.0
margin_bottom = 465.0
alignment = 1

[node name="VSplit" type="VSplitContainer" parent="Margin/VerticalAlign"]
margin_right = 512.0
margin_bottom = 182.0
size_flags_vertical = 3
split_offset = -68

[node name="ScoreLabel" type="Label" parent="Margin/VerticalAlign/VSplit"]
margin_right = 512.0
margin_bottom = 53.0
size_flags_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Score:"
align = 1
valign = 1

[node name="DisplayScore" type="Label" parent="Margin/VerticalAlign/VSplit"]
margin_top = 77.0
margin_right = 512.0
margin_bottom = 182.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "POOOP"
align = 1

[node name="HighScore" type="Label" parent="Margin/VerticalAlign"]
modulate = Color( 0.945098, 1, 0.305882, 1 )
margin_top = 190.0
margin_right = 512.0
margin_bottom = 212.0
align = 1

[node name="Restart" type="Button" parent="Margin/VerticalAlign"]
use_parent_material = true
margin_top = 220.0
margin_right = 512.0
margin_bottom = 299.0
focus_mode = 0
size_flags_vertical = 3
enabled_focus_mode = 0
group = SubResource( 4 )
text = "Restart"

[node name="Quit" type="Button" parent="Margin/VerticalAlign"]
use_parent_material = true
margin_top = 307.0
margin_right = 512.0
margin_bottom = 357.0
focus_mode = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
enabled_focus_mode = 1
group = SubResource( 5 )
text = "Quit"

[node name="Useless" type="Button" parent="Margin/VerticalAlign"]
use_parent_material = true
margin_top = 365.0
margin_right = 512.0
margin_bottom = 415.0
focus_mode = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
enabled_focus_mode = 1
group = SubResource( 5 )
text = "Useless Button"

[connection signal="pressed" from="Margin/VerticalAlign/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Margin/VerticalAlign/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Margin/VerticalAlign/Useless" to="." method="_on_Useless_pressed"]
